--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -16,10 +20,28 @@
         android:theme="@style/Theme.TingTongApp"
         tools:targetApi="31">
         <activity
+            android:name=".Views.searchView"
+            android:exported="false" />
+        <activity
+            android:name=".Views.PopupChooseLocation"
+            android:exported="false" />
+        <activity
+            android:name=".Views.directMapRoomDetail"
+            android:exported="false" />
+        <activity
+            android:name=".Views.PopUpViews"
+            android:exported="false" />
+        <activity
             android:name=".Views.LocationSearch"
             android:exported="false" />
         <activity
             android:name=".Views.Account_View"
+            android:exported="false" />
+        <activity
+            android:name=".Views.personalPage"
+            android:exported="false" />
+        <activity
+            android:name=".Views.roomManagementModel"
             android:exported="false" />
         <activity
             android:name=".Views.PostRoom"
