--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,23 +14,14 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/house"
+        android:label="TingTong"
+        android:roundIcon="@drawable/house"
         android:supportsRtl="true"
         android:theme="@style/Theme.TingTongApp"
         tools:targetApi="31">
         <activity
             android:name=".Views.searchView"
-            android:exported="false" />
-        <activity
-            android:name=".Views.PopupChooseLocation"
-            android:exported="false" />
-        <activity
-            android:name=".Views.directMapRoomDetail"
-            android:exported="false" />
-        <activity
-            android:name=".Views.PopUpViews"
             android:exported="false" />
         <activity
             android:name=".Views.LocationSearch"
